--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
         <div class="delivery-box">
             <div class="delivery-icon">📦✨</div>
             <p><strong>La tua sorpresa è in viaggio!</strong></p>
-            <p>Tieni d'occhio la porta... 🚪</p>
+            <p>Ma tu preparati ad assaporarla! 😋</p>
         </div>
 
         <div class="footer">
