--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         }
 
         .message-box::before {
-            content: "📦✨";
+            content: "";
             position: absolute;
             top: -25px;
             left: 50%;
