--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
             <div class="date">Casella N°4 del Calendario dell'Avvento</div>
         </div>
 
-        <div class="special-badge">🍬 DOLCE SORPRESA 🍬</div>
+        <div class="special-badge">🍬DOLCE SORPRESA🍬</div>
 
         <div class="choco-divider">🍫</div>
 
@@ -311,7 +311,7 @@
         </div>
 
         <div class="footer">
-            <p>Un dolce pensiero per un dolce te 🤎</p>
+            <p>Un dolce pensiero, per un dolce te 🤎</p>
         </div>
 
         <div class="deco-bottom">🎄 🍫 🎄</div>
