--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
         <div class="choco-divider">🍫</div>
 
         <div class="message-box">
-            <p><strong>Posta per Butriolino!📦</strong></p>
+            <p><strong>Posta per Butriolino!📦📬</strong></p>
             <p> </p>
             <p>La tua sorpresa è in viaggio...</p>
             <p>Ma tu preparati ad assaporarla! 😋</p>
