--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             color: #3E2723;
             font-size: 1.4em;
             line-height: 1.9;
-            font-style: italic;
+            font-style: normal;
         }
 
         .message-box .highlight {
